# migrate

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  appveyor.yml  find_def  get_build  get_release  log.txt  screenlog.0  sysinfo.txt
.cargo/: config
.github/: CODEOWNERS
balena-boot/: balena-migrate.yml
balena-boot/beagleboard-xm/: MLO  VERSION  balena-migrate.yml  balena.dtb  omap3-beagle-xm-ab.dtb  omap3-beagle.dtb  u-boot.img
balena-boot/beaglebone-green/: MLO  am335x-bonegreen-wireless.dtb  am335x-bonegreen.dtb  balena-migrate.yml  u-boot.img
balena-boot/intel-nuc/: VERSION  balena-migrate.yml  version.yml
balena-boot/raspberrypi2/: version.yml
balena-boot/raspberrypi3/: balena-migrate.yml  version.yml
balena-boot/raspberrypi4-64/: VERSION  balena-migrate.yml  balena.zImage
config/: balena-migrate.yml  logging.yml  sample-conf.yml
docs/: WinConcept.md  concept.md
migrate_sys/: install.md  startup.nsh
migrate_sys/EFI/BOOT/: README.txt  startup.nsh
migrate_sys/balena/x86_64/: README.txt
migrate_sys/loader/: loader.conf
migrate_sys/loader/entries/: balena-x86_64.conf
ps_script/: Unbenannt1.ps1  gathering.ps1  output.txt
script/: 82-migrate  82-migrate-ns2  85-scripted  extract.sh  find_def  get_mig_config.sh  get_release  make_mig_config.sh  mk_mig_config  mk_mig_initrd  mk_migrator  mkinitram
src/: balena_migrate.rs  balena_stage2.rs  lib.rs  main.rs  mig_error.rs  migrator.rs  test.rs  test_com.rs
src/common/: mig_error.rs  mod.rs
src/linux/: mod.rs  util.rs
src/migrator/: beaglebone.rs  boot_manager.rs  common.rs  defs.rs  device.rs  extract.rs  intel_nuc.rs  lib.rs  linux.rs  linux_common.rs  linux_migrator.rs  mig_error.rs  mod.rs  mswin.rs  raspberrypi.rs  stage2.rs  stage_two.rs
src/migrator/boot_manager/: grub_boot_manager.rs  raspi_boot_manager.rs  u_boot_manager.rs  uboot_manager.rs
src/migrator/common/: api_calls.rs  assets.rs  backup.rs  balena_cfg_json.rs  boot_manager.rs  config.rs  config_helper.rs  device.rs  device_info.rs  disk_util.rs  fail_mode.rs  file_digest.rs  file_info.rs  image_retrieval.rs  logger.rs  mig_error.rs  migrate_info.rs  mod.rs  os_api.rs  os_info.rs  os_release.rs  path_info.rs  stage2_config.rs  stage_info.rs  stream_progress.rs  wifi_config.rs
src/migrator/device/: beaglebone.rs  intel_nuc.rs  raspberrypi.rs
src/migrator/extract/: disk_util.rs
src/migrator/linux/: boot_manager.rs  boot_manager_impl.rs  device.rs  device_impl.rs  disk_util.rs  ensured_cmds.rs  extract.rs  extract_flash.rs  extract_fs.rs  linux_api.rs  linux_common.rs  linux_defs.rs  linux_os_info.rs  lsblk_info.rs  migrate_info.rs  mod.rs  partition_info.rs  path_info.rs  stage2.rs  util.rs
src/migrator/linux_common/: device.rs  device_info.rs  disk_info.rs  ensured_commands.rs  fail_mode.rs  migrate_info.rs  path_info.rs  wifi_config.rs
src/migrator/linux_migrator/: boot_manager.rs  device.rs  ensured_cmds.rs  linux_common.rs  migrate_info.rs  stage2.rs
src/migrator/mswin/: boot_manager.rs  boot_manager_impl.rs  defs.rs  device_impl.rs  drive_info.rs  migrate_info.rs  mod.rs  msw_defs.rs  mswin_api.rs  powershell.rs  util.rs  win_api.rs  wmi_utils.rs
src/migrator/stage2/: stage2_config.rs
src/migrator/stage_two/: util.rs
src/mswin/: mod.rs  powershell.rs  win_api.rs  wmi.rs  wmi_utils.rs
src/mswin/drive_info/: driveletter.rs  hd_partition.rs  hd_volume.rs  mod.rs  volume.rs  (+1 more)
(+98 files in other folders)
