[package]
name = "balena_migrate"
version = "0.1.0"
authors = ["Thomas <thomas@etnur.net>"]
edition = "2018"
[dependencies]
log = { version = "^0.4.5", features = ["std"] }
chrono = "0.4.6"
stderrlog = "*"
csv = "1"
regex = "1"
lazy_static = "*"
clap = "*"
failure = "*"
yaml-rust = "0.4"
colored = "1.7"
# tempfile = "3"

[target.'cfg(unix)'.dependencies]
libc = { git = "https://github.com/rust-lang/libc" } 
[target.'cfg(windows)'.dependencies]
winapi = {  git = "https://github.com/retep998/winapi-rs.git", branch = "0.3", features = [
        "winuser", 
        "handleapi",
        "fileapi",
        "winbase",
        "winerror",
        "objbase", 
        "wbemcli", 
        "objidlbase", 
        "oaidl", 
        "oleauto", 
        "errhandlingapi" ] }
# wmi = { git = "https://github.com/ohadravid/wmi-rs.git" }
widestring = "*"

