[package]
name = "balena_migrate"
version = "0.1.0"
authors = ["Thomas <thomas@etnur.net>"]
edition = "2018"

# tried this to remove dependency to gcclib - no success
# [profile.release]
# panic = 'abort'

[lib]
path = "src/migrator/lib.rs"

[[bin]]
name = "balena-migrate"
path = "src/balena_migrate.rs"

[[bin]]
name = "balena-stage2"
path = "src/balena_stage2.rs"

[[bin]]
name = "test"
path = "src/test.rs"


[dependencies]
log = { version = "^0.4.5", features = ["std"] }
chrono = "*"
csv = "1"
regex = "1"
lazy_static = "*"
clap = "*"
failure = "*"
serde_json = "*"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
yaml-rust = "0.4"
url = "*"
mod_logger = { git = "https://github.com/samothx/ModuleLogger.git" }
mktemp = "*"

tar = "*"
flate2 = "1.0"

# tempfile = "3"

[target.'cfg(unix)'.dependencies]
libc = { git = "https://github.com/rust-lang/libc" }
nix = "*"


[target.'cfg(windows)'.dependencies]
winapi = {  git = "https://github.com/retep998/winapi-rs.git", branch = "0.3", features = [
        "winuser", 
        "handleapi",
        "fileapi",
        "winbase",
        "winerror",
        "objbase", 
        "wbemcli", 
        "objidlbase", 
        "oaidl", 
        "oleauto", 
        "errhandlingapi" ] }
# wmi = { git = "https://github.com/ohadravid/wmi-rs.git" }
widestring = "*"

